- added configuration for auto-activation of new users (Christopher Andrews)
- added support for SMTP (Christopher Andrews)
- added bundled Typeahead.js (Thorsten)
- added support for custom headers and footers in PDF exports (Thorsten)
- added support for language specific open questions (Thorsten)
- added moderator groups to categories (Thorsten)
- added FAQ overview page (Thorsten)
- extended REST/JSON API (Thorsten)
- code base PSR-1 and PSR-2 compatible (Thorsten)
- updated bundled Symfony ClassLoader to version 2.6.12 (Thorsten)
- updated bundled jQuery to version 1.11.2 (Thorsten)
- updated bundled Bootstrap to version 3.3.5 (Thorsten)
- updated bundled Font Awesome to version 4.4.0 (Thorsten)
- updated bundled Modernizr to version 2.8.3 (Thorsten)
- updated bundled TinyMCE to version 4.2.7 (Thorsten)
- updated bundled SwiftMailer to version 5.4.1 (Christopher Andrews, Thorsten)
- updated bundled Parsedown to version 1.5.3 (Jerry van Kooten, Thorsten)
- updated bundled HighlightJS to version 8.9.1 (Thorsten)
- removed bundled SyntaxHighlighter (Thorsten)
- dropped support for ext/mysql (Thorsten)
- dropped support for SQLite2 (Thorsten)
- dropped support for Zeus Webserver, IIS 6 and lighttpd (Thorsten)

Version 2.8.25 - 2015-12-05
- ready for PHP 7 (Thorsten)
- added American English translation (Stewart Day)
- updated bundled Symfony ClassLoader to version 2.6.11 (Thorsten)
- updated Japanese translation
- updated Brazilian Portuguese translation
- updated Italian translation (Amedeo Fragai)
- updated Dutch translation
- fixed some minor bugs (Thorsten)

Version 2.8.24 - 2015-07-27
- updated Farsi translation (aysabzevar)
- fixed some minor bugs (Thorsten)

Version 2.8.23 - 2015-06-13
- updated bundled Symfony ClassLoader to version 2.6.9 (Thorsten)
- fixed "remember me" issues (Thorsten)
- fixed some minor bugs (Thorsten)

Version 2.8.22 - 2015-03-31
- updated Czech translation
- updated Brazilian Portuguese translation
- fixed some minor bugs (Thorsten)
