@@ -10,13 +10,11 @@
  * obtain one at http://mozilla.org/MPL/2.0/.
  *
  * @category  phpMyFAQ
- *
  * @author    Thorsten Rinne <thorsten@phpmyfaq.de>
- *
- * @since     2009-10-07
- *
- * @license   Mozilla Public License 1.1
  * @copyright 2009-2015 phpMyFAQ Team
+ * @license   http://www.mozilla.org/MPL/2.0/ Mozilla Public License Version 2.0
+ * @link      http://www.phpmyfaq.de
+ * @since     2009-10-07
  */
 if (!defined('IS_VALID_PHPMYFAQ')) {
     exit();
@@ -26,13 +24,11 @@ if (!defined('IS_VALID_PHPMYFAQ')) {
  * PMF_Export_Xml.
  *
  * @category  phpMyFAQ
- *
  * @author    Thorsten Rinne <thorsten@phpmyfaq.de>
- *
+ * @copyright 2009-2015 phpMyFAQ Team
+ * @license   http://www.mozilla.org/MPL/2.0/ Mozilla Public License Version 2.0
+ * @link      http://www.phpmyfaq.de
  * @since     2009-10-07
- *
- * @license   Mozilla Public License 1.1
- * @copyright 2009 phpMyFAQ Team
  */
 class PMF_Export_Xml extends PMF_Export
 {
