@@ -196,6 +196,11 @@ class PMF_HttpStreamer
                 $description = 'phpMyFaq CSV export file';
                 $mimeType = 'text/csv';
                 break;
+            case 'json':
+                $filename = 'phpmyfaq.json';
+                $description = 'phpMyFaq JSON export file';
+                $mimeType = 'application/json';
+                break;
             // In this case no default statement is required:
             // the one above is just for clean coding style
             default:
